program.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&family=Raleway:wght@300&display=swap');

#overlap {
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: row;
    width: 90%;
    /* height: 1000px; */
    justify-content: space-between;
}

div {
    border: solid black 1px;
}

#overlap > img {
    position: relative;
    margin-top: 10%;
    width: 60%;
    min-width: 500px;
    max-width: 100%;
    height: auto;
    min-height: 375px;
    /* max-height: 100%; */
    right: 100px;
    z-index: 1;
}

.panel {
    position: relative;
    padding-top: 50px;
    padding-left: 100px;
    padding-right: 80px;
    padding-bottom: 100px;
    margin-top: 200px;
    width: 450px;
    min-width: 450px;
    height: 450px;
    min-height: 450px;
    top: 75px;
    /* left: 80px; */
    z-index: 2;
    background-color: rgb(204, 204, 204);
}

h1 {
    font-family: 'Raleway', sans-serif;
    font-size: 56px;
    font-weight: 300;
}

.panel-text {
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 200;
    color:  rgb(77, 74, 74);
    line-height: 32px;

}

.interest-form {
    background-color: rgb(117,20,12);
    color: white;
    width: 150px;
    height: 40px;
    border-radius: 10px;
    border: 0px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.interest-form:hover {
    background-color: gainsboro;
    color: black;
}

#the-program-h1 {
    margin-top: 920px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    font-family: 'Raleway', sans-serif;
    font-weight: 200;
    font-size: 40px;

}

.panels{
    margin-top: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}

.panels > div {
    border: 1px solid;
    border-color: rgb(117,20,12);
    box-shadow: 3px 3px 4px 0 rgba(107, 30, 35, 1);
    height: 380px;
    width: 340px;
    margin: 20px;
}

.panels > div > h3 {
    padding-top: 20px;
    text-align: center;
    font-size: 24px;
    font-family: 'Raleway', sans-serif;   
    font-weight: 300;
}

.panels > div > p {
    margin: 15px;
    font-family: 'Raleway', sans-serif;   
    font-size: 16px;
    font-weight: 400;
}

@media only screen and (max-width: 1200px) {
    #overlap > img {
        position: static;
        display: none;
        top: 1px;
        right: 1px;
        width: 1px;
        height: 1px;
    }
    #overlap {
        position: static;
    }
    
    .panel {
        position: static;
        padding-left: 10%;
        padding-right: 10%;
        margin-right: 5%;
        margin-left: 5%;
        width: auto;
        height: auto;
        background-color: rgb(204, 204, 204);
    }

    #the-program-h1 {
        margin-top: 200px;
    }

    #spaceholder-div {
        display: none;
    }
}

